WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249440
Don’t serialize shorthands when any of the longhands are missing
https://bugs.webkit.org/show_bug.cgi?id=249440
Summary
Don’t serialize shorthands when any of the longhands are missing
Darin Adler
Reported
2022-12-15 16:27:57 PST
We should never serialize any shorthand when one of the longhands is missing.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-15 16:29:54 PST
<
rdar://problem/103423965
>
Darin Adler
Comment 2
2022-12-16 12:18:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7770
EWS
Comment 3
2022-12-17 00:30:00 PST
Committed
258038@main
(a7f14bf80bc9): <
https://commits.webkit.org/258038@main
> Reviewed commits have been landed. Closing PR #7770 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug